# elasticidade-de-preco

./: README.md  pyproject.toml
app/: app.py
data/: business_performance.csv  crossprice.csv  df_elasticity.csv
notebook/: elasticidade.ipynb
